--- a/Html/style.css
+++ b/Html/style.css
@@ -10,6 +10,16 @@
   background-color: rgb(198, 196, 196);
   height: 50vh;
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  
+}
+.img2 .card{
+  width: 400px;
+  height:300px;
+  border: 1px solid black;
 }
 .img3 {
   background-color: rgb(219, 172, 52);
@@ -43,12 +53,38 @@
   height: 90vh;
   width: 100%;
 }
+/* header */
 .header {
   padding: 50px;
   text-align: center;
-  background-color: rgb(198, 196, 196);
+  background-color: rgb(105, 104, 104);
   font-size: 30px;
 }
+.first{
+  background-color: rgb(105, 104, 104);
+  height: 10px;
+  display: flex;
+  align-content: center;
+}
+.first button{
+  color: white;
+}
+.second{
+  display: flex;
+  justify-content: flex-end;
+}
+.second a{
+  color: white;
+}
+ul,li{
+  flex:1;
+  max-width: 800px;
+}
+.navbar-brand
+{
+  font-size: larger;
+}
+/* header */
 .footer {
   padding: 50px;
   text-align: center;
