--- a/Html/style.css
+++ b/Html/style.css
@@ -92,7 +92,6 @@ li {
 }
 .text1 {
   display: flex;
-  /* flex-wrap: wrap; */
   flex-direction: row;
   /* height: 100vh; */
 }
@@ -120,5 +119,8 @@ li {
   color: aliceblue;
   margin-top: 6%;
   padding: 5%;
+  display: flex;
+  justify-content: start;
   /* text-align: left; */
+  background-color: aqua;
 }
