--- a/Html/style.css
+++ b/Html/style.css
@@ -13,13 +13,48 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: flex-end;
+  align-content: center;
 }
-.img2 .card {
-  width: 400px;
+.card{
+  width:350px;
   height: 300px;
-  border: 1px solid black;
+  border: 1px solid rgb(198, 196, 196);
+  
 }
+.card .box{
+  width:100%;
+  height:50px;
+  /* border: 1px solid black; */
+  display: flex;
+  justify-content: center;
+  background-color: rgb(198, 196, 196);
+}
+.card .box .circle{
+  width:100px;
+  height:100px;
+  border-radius: 50%;
+  /* border: 1px solid black; */
+  background-color:rgb(219, 172, 52);
+  margin-top: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card .box .circle svg{
+  width: 70px;
+  height: 70px;
+}
+.card h4{
+  text-align: center;
+  margin-top: 55px;
+  font-size:xx-large;
+}
+.card p{
+  text-align: center;
+  margin-top: 25px;
+  color: grey;
+}
+
 .img3 {
   background-color: rgb(219, 172, 52);
   height: 100vh;
