--- a/Html/style.css
+++ b/Html/style.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-content: center;
+  /* align-content: center; */
 }
 .card{
   width:350px;
@@ -24,7 +24,7 @@
 .card .box{
   width:100%;
   height:50px;
-  /* border: 1px solid black; */
+  /* border: 1px solid rgb(198, 196, 196); */
   display: flex;
   justify-content: center;
   background-color: rgb(198, 196, 196);
@@ -54,7 +54,27 @@
   margin-top: 25px;
   color: grey;
 }
-
+@media(max-width:750px)
+{
+  .img2{
+    height: 140vh;
+    display: flex;
+    /* flex-wrap: wrap; */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  
+}
+@media(min-width:750px) and (max-width:1300px)
+{
+  .img2{
+    height: 85vh;
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
 .img3 {
   background-color: rgb(219, 172, 52);
   height: 100vh;
@@ -185,4 +205,4 @@ li {
     width: 20%;
   }
 }
-@media();
+
