--- a/Html/style.css
+++ b/Html/style.css
@@ -20,9 +20,9 @@
   height: 300px;
   border: 1px solid rgb(198, 196, 196);
 }
-.card .box{
-  width:100%;
-  height:50px;
+.card .box {
+  width: 100%;
+  height: 50px;
   /* border: 1px solid black; */
   display: flex;
   justify-content: center;
@@ -52,27 +52,6 @@
   text-align: center;
   margin-top: 25px;
   color: grey;
-}
-@media(max-width:750px)
-{
-  .img2{
-    height: 140vh;
-    display: flex;
-    /* flex-wrap: wrap; */
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  
-}
-@media(min-width:750px) and (max-width:1300px)
-{
-  .img2{
-    height: 85vh;
-    display: flex;
-    flex-wrap: wrap;
-  }
 }
 .img3 {
   background-color: rgb(219, 172, 52);
@@ -106,7 +85,7 @@
   height: 90vh;
   width: 100%;
 }
-/* header */
+
 .header {
   padding: 50px;
   text-align: center;
@@ -137,7 +116,7 @@ li {
 .navbar-brand {
   font-size: larger;
 }
-/* header */
+
 .footer {
   padding: 50px;
   text-align: center;
@@ -218,4 +197,20 @@ li {
     width: 20%;
   }
 }
-@media();
+@media (min-width: 750px) and (max-width: 1300px) {
+  .img2 {
+    height: 85vh;
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+@media (max-width: 750px) {
+  .img2 {
+    height: 140vh;
+    display: flex;
+    /* flex-wrap: wrap; */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
