--- a/Html/style.css
+++ b/Html/style.css
@@ -6,6 +6,56 @@
   height: 100vh;
   width: 100%;
 }
+.text1 {
+  display: flex;
+  flex-direction: row;
+  /* height: 100vh; */
+}
+.textleft {
+  height: 70vh;
+  width: 50%;
+  /* border: 1px solid rgb(245, 240, 240); */
+  border-right: 15px solid goldenrod;
+  margin: 5% 0% 15% 20%;
+}
+.textleft h1 {
+  display: flex;
+  color: rgb(252, 250, 247);
+  align-content: end;
+  justify-content: flex-end;
+  margin: 10%;
+}
+.textright {
+  height: 60vh;
+  width: 50rem;
+  /* border: 2px solid rgb(245, 240, 240); */
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: column;
+}
+.textright p {
+  color: aliceblue;
+  margin-top: 6%;
+  padding: 5%;
+  display: flex;
+  position: relative;
+  word-wrap: break-word;
+  text-align: left;
+}
+.textright h4 {
+  color: aliceblue;
+  padding: 5%;
+}
+.btn {
+  background-color: goldenrod;
+  color: white;
+  height: 3em;
+  width: 10em;
+  margin-left: 2rem;
+  font-size: 1em;
+  border: none;
+  border-radius: 10px;
+}
 .img2 {
   background-color: rgb(198, 196, 196);
   height: 50vh;
@@ -14,6 +64,9 @@
   flex-direction: row;
   justify-content: space-evenly;
   /* align-content: center; */
+}
+.img2 h3 {
+  color: black;
 }
 .card {
   width: 350px;
@@ -60,9 +113,38 @@
 }
 .img4 {
   background-color: rgb(198, 196, 196);
-  height: 85vh;
+  height: 83vh;
   width: 100%;
   border: 2px solid black;
+}
+.img4 h1 {
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+}
+.img4 .row .cards {
+  border-left: 12px solid rgb(198, 196, 196);
+  border-bottom: 18px solid rgb(198, 196, 196);
+  height: 16em;
+  /* width: 50%; */
+  background-color: white;
+}
+.container .row {
+  display: flex;
+  justify-content: space-between;
+}
+.img4 .row .cards1 {
+  border-left: 40px solid goldenrod;
+  height: 10rem;
+  width: 33rem;
+  margin-top: 1em;
+}
+.cards1 p {
+  padding: 14px;
+  display: flex;
+  text-align: justify;
+  position: relative;
+  word-wrap: normal;
 }
 .img5 {
   background-color: rgb(198, 196, 196);
@@ -123,59 +205,7 @@ li {
   background-color: rgb(105, 104, 104);
   font-size: 30px;
 }
-.text1 {
-  display: flex;
-  flex-direction: row;
-  /* height: 100vh; */
-}
-.textleft {
-  height: 70vh;
-  width: 50%;
-  /* border: 1px solid rgb(245, 240, 240); */
-  border-right: 15px solid goldenrod;
-  margin: 5% 0% 15% 20%;
-}
-.textleft h1 {
-  display: flex;
-  color: rgb(252, 250, 247);
-  align-content: end;
-  justify-content: flex-end;
-  margin: 10%;
-}
-.textright {
-  height: 60vh;
-  width: 50rem;
-  /* border: 2px solid rgb(245, 240, 240); */
-  margin-top: 5rem;
-  display: flex;
-  flex-direction: column;
-}
-.textright p {
-  color: aliceblue;
-  margin-top: 6%;
-  padding: 5%;
-  display: flex;
-  position: relative;
-  word-wrap: break-word;
-  text-align: left;
-}
-.textright h4 {
-  color: aliceblue;
-  padding: 5%;
-}
-.btn {
-  background-color: goldenrod;
-  color: white;
-  height: 3em;
-  width: 10em;
-  margin-left: 2rem;
-  font-size: 1em;
-  border: none;
-  border-radius: 10px;
-}
-.img2 h3 {
-  color: black;
-}
+
 @media (min-width: 750px) and (max-width: 1300px) {
   .text1 {
     display: flex;
