--- a/Html/style.css
+++ b/Html/style.css
@@ -57,6 +57,52 @@
   background-color: rgb(219, 172, 52);
   height: 100vh;
   width: 100%;
+  display:flex;
+  justify-content: center;
+  align-items:center ;
+}
+.img3 .outer{
+  width:70%;
+  height:90vh;
+  /* border:1px solid black; */
+  display: flex;
+  flex-direction: row;
+  
+}
+.img3 .outer .card1
+{
+  width:700px;
+  height:90vh;
+  /* margin-top:50px; */
+  /* border: 1px solid black; */
+ 
+}
+.img3 .outer .card1 .image
+{
+  background-image: url(../Images/bg1.jpg);
+  background-size: cover;
+  width: 900px;
+  height: 500px;
+}
+.img3 .outer .card2
+{
+  width:400px;
+  height:90vh;
+  /* border: 1px solid black; */
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+.img3 .outer .card2 .text{
+  width:400px;
+  height:60vh;
+  background-color: white;
+ 
+}
+.img3 .outer .card2 .text .display-4
+{
+  font-weight:700;
+  margin-left: 0.5em;
 }
 .img4 {
   background-color: rgb(198, 196, 196);
