--- a/Html/style.css
+++ b/Html/style.css
@@ -110,68 +110,61 @@
   background-color: rgb(219, 172, 52);
   height: 100vh;
   width: 100%;
-  display:flex;
+  display: flex;
   justify-content: center;
-  align-items:center ;
+  align-items: center;
 }
-.img3 .outer{
-  width:70%;
-  height:90vh;
+.img3 .outer {
+  width: 70%;
+  height: 90vh;
   /* border:1px solid black; */
   display: flex;
   flex-direction: row;
-  
 }
-.img3 .outer .card1
-{
-  width:700px;
-  height:90vh;
+.img3 .outer .card1 {
+  width: 700px;
+  height: 90vh;
   /* margin-top:50px; */
   /* border: 1px solid black; */
- 
 }
-.img3 .outer .card1 .image
-{
+.img3 .outer .card1 .image {
   background-image: url(../Images/bg1.jpg);
   background-size: cover;
   width: 900px;
   height: 500px;
 }
-.img3 .outer .card2
-{
-  width:400px;
-  height:90vh;
+.img3 .outer .card2 {
+  width: 400px;
+  height: 90vh;
   /* border: 1px solid black; */
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
 }
-.img3 .outer .card2 .text{
-  width:400px;
-  height:60vh;
+.img3 .outer .card2 .text {
+  width: 400px;
+  height: 60vh;
   background-color: white;
-  
 }
-.img3 .outer .card2 .text .display-4
-{
-  font-weight:700;
-  
+.img3 .outer .card2 .text .display-4 {
+  font-weight: 700;
+
   margin-left: 0.5em;
   margin-top: 0.5em;
 }
-.img3 .outer .card2 .text p{
+.img3 .outer .card2 .text p {
   margin-left: 2em;
   margin-top: 1.5em;
 }
-.img3 .outer .card2 .text button{
+.img3 .outer .card2 .text button {
   background-color: rgb(219, 172, 52);
-  color:black;
+  color: black;
   margin-left: 3em;
   margin-top: 10px;
-  font-size:small;
+  font-size: small;
   font-weight: 600;
   padding: 10px;
-  width:150px;
+  width: 150px;
   height: 50px;
   border-radius: 10px;
   border: 1px solid rgb(219, 172, 52);
@@ -203,11 +196,12 @@
   height: 10rem;
   width: 33rem;
   margin-top: 1em;
+  word-wrap: normal;
 }
 .cards1 p {
   padding: 14px;
   display: flex;
-  text-align: justify;
+  text-align: left;
   position: relative;
   word-wrap: normal;
 }
