--- a/Html/style.css
+++ b/Html/style.css
@@ -208,11 +208,12 @@
 .img5 {
   background-color: #d9d9d9;
   position: relative;
-  height: 150vh;
+  height: 160vh;
   width: 100%;
-  /* display: flex; */
-  justify-content: center;
-  flex-wrap: wrap;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* flex-wrap: wrap; */
 }
 .decidea {
   height: 20em;
@@ -290,6 +291,7 @@
   height: 100vh;
   width: 100%;
   display: flex;
+  /* flex-direction: row; */
   justify-content: center;
   align-items: center;
 }
