--- a/Html/style.css
+++ b/Html/style.css
@@ -1,6 +1,36 @@
 * {
   margin: 0%;
 }
+.header {
+  padding: 50px;
+  text-align: center;
+  background-color: rgb(105, 104, 104);
+  font-size: 30px;
+}
+.first {
+  background-color: rgb(105, 104, 104);
+  height: 10px;
+  display: flex;
+  align-content: center;
+}
+.first button {
+  color: white;
+}
+.second {
+  display: flex;
+  justify-content: flex-end;
+}
+.second a {
+  color: white;
+}
+ul,
+li {
+  flex: 1;
+  max-width: 600px;
+}
+.navbar-brand {
+  font-size: larger;
+}
 .img1 {
   background-image: url(../Images/bg1.jpg);
   height: 100vh;
@@ -15,7 +45,7 @@
   height: 70vh;
   width: 50%;
   /* border: 1px solid rgb(245, 240, 240); */
-  border-right: 15px solid goldenrod;
+  border-right: 15px solid #e8b846;
   margin: 5% 0% 15% 20%;
 }
 .textleft h1 {
@@ -47,7 +77,7 @@
   padding: 5%;
 }
 .btn {
-  background-color: goldenrod;
+  background-color: #e8b846;
   color: white;
   height: 3em;
   width: 10em;
@@ -86,7 +116,7 @@
   height: 100px;
   border-radius: 50%;
   /* border: 1px solid black; */
-  background-color: rgb(219, 172, 52);
+  background-color: #e8b846;
   margin-top: 5px;
   display: flex;
   justify-content: center;
@@ -107,7 +137,7 @@
   color: grey;
 }
 .img3 {
-  background-color: rgb(219, 172, 52);
+  background-color: #e8b846;
   height: 100vh;
   width: 100%;
   display: flex;
@@ -157,7 +187,7 @@
   margin-top: 1.5em;
 }
 .img3 .outer .card2 .text button {
-  background-color: rgb(219, 172, 52);
+  background-color: #e8b846;
   color: black;
   margin-left: 3em;
   margin-top: 10px;
@@ -167,7 +197,7 @@
   width: 150px;
   height: 50px;
   border-radius: 10px;
-  border: 1px solid rgb(219, 172, 52);
+  border: 1px solid #e8b846;
 }
 .img4 {
   background-color: #d9d9d9;
@@ -192,7 +222,7 @@
   justify-content: space-between;
 }
 .img4 .row .cards1 {
-  border-left: 40px solid goldenrod;
+  border-left: 40px solid #e8b846;
   height: 10rem;
   width: 33rem;
   margin-top: 1em;
@@ -287,7 +317,7 @@
   padding: 5%;
 }
 .img6 {
-  background-color: rgb(219, 172, 52);
+  background-color: #e8b846;
   height: 100vh;
   width: 100%;
   display: flex;
@@ -400,49 +430,87 @@
   margin-top: -32em;
 }
 .img8 {
-  background-color: rgb(219, 172, 52);
-  height: 90vh;
+  background-color: #e8b846;
+  height: 100vh;
   width: 100%;
-}
-
-.header {
-  padding: 50px;
-  text-align: center;
-  background-color: rgb(105, 104, 104);
-  font-size: 30px;
-}
-.first {
-  background-color: rgb(105, 104, 104);
-  height: 10px;
   display: flex;
-  align-content: center;
+  flex-direction: row;
+  justify-content: center;
+  position: relative;
 }
-.first button {
-  color: white;
-}
-.second {
+.logos {
+  height: 70%;
+  width: 40%;
+  position: absolute;
+  left: 9em;
+  top: 7em;
+  z-index: 1;
   display: flex;
-  justify-content: flex-end;
+  /* justify-content: space-evenly; */
+  flex-wrap: wrap;
+  row-gap: 1em;
+  /* column-gap: 10px; */
 }
-.second a {
-  color: white;
+.logos .logos1 {
+  width: 50%;
+  height: 50%;
+  border-left: 13px solid #e8b846;
+  background-color: rgb(16, 14, 14);
 }
-ul,
-li {
-  flex: 1;
-  max-width: 600px;
+.contactus {
+  height: 80%;
+  width: 53%;
+  border-radius: 10px;
+  position: absolute;
+  background-color: white;
+  right: 5em;
+  top: 5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-.navbar-brand {
-  font-size: larger;
+.img8 .contactus .form {
+  width: 40em;
+  height: 30em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-
+.name,
+.email {
+  width: 30em;
+  height: 2.5em;
+  background-color: #eae6e6;
+  border: none;
+  border-radius: 3px;
+}
+.blank {
+  width: 30em;
+  height: 7em;
+  background-color: #eae6e6;
+  border: none;
+  border-radius: 3px;
+}
+.submit {
+  height: 3em;
+  width: 30em;
+  background-color: #e8b846;
+  border: none;
+  border-radius: 3px;
+}
 .footer {
   padding: 50px;
   text-align: center;
   background-color: rgb(105, 104, 104);
   font-size: 30px;
 }
-
+.footer p {
+  color: white;
+  font-size: 12px;
+  font-family: sans-serif;
+}
 /* @media (min-width: 750px) and (max-width: 1300px) {
   .text1 {
     display: flex;
