--- a/Html/style.css
+++ b/Html/style.css
@@ -439,7 +439,7 @@ li {
   position: relative;
 }
 .logos {
-  height: 70%;
+  height: 75%;
   width: 40%;
   position: absolute;
   left: 9em;
@@ -456,11 +456,31 @@ li {
   height: 50%;
   border-left: 13px solid #e8b846;
   background-color: rgb(16, 14, 14);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1em;
+}
+.logos svg {
+  fill: #e8b846;
+  height: 5em;
+}
+.logos1 h3 {
+  color: white;
+  padding: 10px;
+}
+.logos1 p {
+  color: white;
+  text-align: center;
+}
+.logos1 a {
+  color: #e8b846;
 }
 .contactus {
-  height: 80%;
-  width: 53%;
-  border-radius: 10px;
+  height: 85%;
+  width: 50%;
+  /* border-radius: 10px; */
   position: absolute;
   background-color: white;
   right: 5em;
