--- a/Html/style.css
+++ b/Html/style.css
@@ -76,7 +76,7 @@ li {
   color: aliceblue;
   padding: 5%;
 }
-.btn {
+.btn-1 {
   background-color: #e8b846;
   color: white;
   height: 3em;
@@ -85,6 +85,11 @@ li {
   font-size: 1em;
   border: none;
   border-radius: 10px;
+}
+.btn-1:hover {
+  box-shadow: 0 3px 10px rgb(18, 2, 7);
+  /* border: 1px rgb(200, 119, 146); */
+  transform: scale(1.1);
 }
 .img2 {
   background-color: #d9d9d9;
@@ -134,7 +139,7 @@ li {
 .card p {
   text-align: center;
   margin-top: 25px;
-  color: grey;
+  color: rgb(183, 181, 181);
 }
 .img3 {
   background-color: #e8b846;
@@ -185,19 +190,6 @@ li {
 .img3 .outer .card2 .text p {
   margin-left: 2em;
   margin-top: 1.5em;
-}
-.img3 .outer .card2 .text button {
-  background-color: #e8b846;
-  color: black;
-  margin-left: 3em;
-  margin-top: 10px;
-  font-size: small;
-  font-weight: 600;
-  padding: 10px;
-  width: 150px;
-  height: 50px;
-  border-radius: 10px;
-  border: 1px solid #e8b846;
 }
 .img4 {
   background-color: #d9d9d9;
