--- a/Html/style.css
+++ b/Html/style.css
@@ -4,11 +4,11 @@
 .header {
   padding: 50px;
   text-align: center;
-  background-color: rgb(105, 104, 104);
+  /* background-color: #d9d9d9; */
   font-size: 30px;
 }
 .first {
-  background-color: rgb(105, 104, 104);
+  /* background-color: #d9d9d9; */
   height: 10px;
   display: flex;
   align-content: center;
@@ -21,7 +21,7 @@
   justify-content: flex-end;
 }
 .second a {
-  color: white;
+  color: rgb(13, 13, 13);
 }
 ul,
 li {
@@ -93,11 +93,12 @@ li {
 }
 .img2 {
   background-color: #d9d9d9;
-  height: 50vh;
+  height: 60vh;
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  align-items: center;
   /* align-content: center; */
 }
 .img2 h3 {
@@ -107,6 +108,12 @@ li {
   width: 350px;
   height: 300px;
   border: 1px solid #d9d9d9;
+  border-radius: 5px;
+}
+.card:hover{
+  transform: scale(1.1);
+  border: none;
+  box-shadow: 0 3px 10px rgb(18, 2, 7);
 }
 .card .box {
   width: 100%;
@@ -175,6 +182,7 @@ li {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  border-radius: 10px;
 }
 .img3 .outer .card2 .text {
   width: 400px;
@@ -200,7 +208,8 @@ li {
 .img4 h1 {
   display: flex;
   justify-content: center;
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
+  padding: 15px;
 }
 .img4 .row .cards {
   border-left: 12px solid #d9d9d9;
