--- a/Html/style.css
+++ b/Html/style.css
@@ -110,7 +110,7 @@ li {
   border: 1px solid #d9d9d9;
   border-radius: 5px;
 }
-.card:hover{
+.card:hover {
   transform: scale(1.1);
   border: none;
   box-shadow: 0 3px 10px rgb(18, 2, 7);
@@ -172,8 +172,9 @@ li {
 .img3 .outer .card1 .image {
   background-image: url(../Images/bg1.jpg);
   background-size: cover;
-  width: 900px;
-  height: 500px;
+  width: 50em;
+  height: 35em;
+  box-shadow: 0 3px 10px rgb(18, 2, 7);
 }
 .img3 .outer .card2 {
   width: 400px;
@@ -183,9 +184,10 @@ li {
   justify-content: flex-end;
   align-items: flex-end;
   border-radius: 10px;
+  /* box-shadow: 0 3px 10px rgb(18, 2, 7); */
 }
 .img3 .outer .card2 .text {
-  width: 400px;
+  width: 50em;
   height: 60vh;
   background-color: white;
 }
@@ -204,6 +206,9 @@ li {
   height: 83vh;
   width: 100%;
   /* border: 2px solid black; */
+}
+.img4 .container:hover {
+  box-shadow: 0 3px 10px rgb(18, 2, 7);
 }
 .img4 h1 {
   display: flex;
@@ -235,6 +240,7 @@ li {
   text-align: left;
   position: relative;
   word-wrap: normal;
+  text-overflow: ellipsis;
 }
 .img5 {
   background-color: #d9d9d9;
@@ -247,8 +253,8 @@ li {
   /* flex-wrap: wrap; */
 }
 .decidea {
-  height: 20em;
-  width: 32em;
+  height: 22em;
+  width: 35em;
   /* border: 1px solid black; */
   display: flex;
   justify-content: center;
@@ -259,12 +265,14 @@ li {
   background-color: white;
   box-shadow: 10px solid black;
   z-index: 1;
+  box-shadow: 0 3px 10px rgb(18, 2, 7);
+  border-radius: 5px;
 }
 .decidea p {
   word-wrap: break-word;
 }
 .img5 .image1 {
-  margin: 1em 0em 0em 3em;
+  margin: 2em 0em 0em 2.5em;
 }
 .image1 img {
   height: 28em;
@@ -273,6 +281,7 @@ li {
   position: relative;
   top: 5em;
   left: 14em;
+  box-shadow: 0 3px 10px rgb(18, 2, 7);
 }
 .img5 .image2 {
   margin: 1em 0em 0em 3em;
@@ -283,6 +292,7 @@ li {
   position: relative;
   bottom: 11em;
   left: 40em;
+  box-shadow: 0 3px 10px rgb(18, 2, 7);
 }
 .img5 .image3 {
   margin: 1em 0em 0em 3em;
@@ -293,6 +303,7 @@ li {
   width: 20em;
   bottom: 14em;
   left: 30em;
+  box-shadow: 0 3px 10px rgb(18, 2, 7);
 }
 .img5 .image4 {
   margin: 1em 0em 0em 3em;
@@ -304,6 +315,7 @@ li {
   position: relative;
   bottom: 27em;
   left: 55em;
+  box-shadow: 0 3px 10px rgb(18, 2, 7);
 }
 .leftbox {
   height: 10em;
@@ -336,15 +348,15 @@ li {
   width: 550px;
   height: 35vh;
   background-color: rgb(222, 233, 236);
-
   margin-left: -150px;
-
   margin-top: 19em;
+  box-shadow: 0 3px 10px rgb(18, 2, 7);
 }
 .img6 .outer img {
   width: 500px;
   height: 70vh;
   z-index: 1;
+  box-shadow: 0 3px 10px rgb(18, 2, 7);
 }
 .img6 .outer .info {
   width: 400px;
@@ -353,6 +365,7 @@ li {
   margin-top: 40px;
   margin-left: -450px;
   z-index: 2;
+  box-shadow: 0 3px 10px rgb(18, 2, 7);
 }
 .img6 .outer .info h1 {
   font-weight: 800;
@@ -383,6 +396,7 @@ li {
   margin-top: 5em;
   position: relative;
   /* z-index: 2; */
+  box-shadow: 0 3px 10px rgb(18, 2, 7);
 }
 .img7 .imag2 img {
   width: 600px;
@@ -390,11 +404,12 @@ li {
   margin-left: 40em;
   margin-top: -10em;
   z-index: -1;
+  box-shadow: 0 3px 10px rgb(18, 2, 7);
 }
 .img7 .cozy {
   width: 520px;
   height: 500px;
-
+  box-shadow: 0 3px 10px rgb(18, 2, 7);
   margin-left: 20em;
   margin-top: -10em;
   background-color: white;
@@ -423,12 +438,14 @@ li {
   margin-left: 8em;
   margin-top: -5em;
   z-index: -1;
+  box-shadow: 0 3px 10px rgb(18, 2, 7);
 }
 .img7 .imag4 img {
   width: 400px;
   height: 600px;
   margin-left: 57em;
   margin-top: -32em;
+  box-shadow: 0 3px 10px rgb(18, 2, 7);
 }
 .img8 {
   background-color: #e8b846;
@@ -447,7 +464,7 @@ li {
   top: 7em;
   z-index: 1;
   display: flex;
-  /* justify-content: space-evenly; */
+  /* box-shadow: 0 3px 10px rgb(18, 2, 7); */
   flex-wrap: wrap;
   row-gap: 1em;
   /* column-gap: 10px; */
@@ -490,6 +507,7 @@ li {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  box-shadow: 0 3px 10px rgb(18, 2, 7);
 }
 .img8 .contactus .form {
   width: 40em;
