--- a/Html/style.css
+++ b/Html/style.css
@@ -542,11 +542,11 @@ li {
 .footer {
   padding: 50px;
   text-align: center;
-  background-color: rgb(105, 104, 104);
+  background-color:  #eae6e6;
   font-size: 30px;
 }
 .footer p {
-  color: white;
+  color: rgb(16, 16, 16);
   font-size: 12px;
   font-family: sans-serif;
 }
