--- a/Interior/style.css
+++ b/Interior/style.css
@@ -109,6 +109,7 @@ li {
   height: 300px;
   border: 1px solid #d9d9d9;
   border-radius: 5px;
+  transition: all 0.8s;
 }
 .card:hover {
   transform: scale(1.1);
@@ -542,7 +543,7 @@ li {
 .footer {
   padding: 50px;
   text-align: center;
-  background-color:  #eae6e6;
+  background-color: #eae6e6;
   font-size: 30px;
 }
 .footer p {
@@ -550,12 +551,12 @@ li {
   font-size: 12px;
   font-family: sans-serif;
 }
-/* @media (min-width: 750px) and (max-width: 1300px) {
+@media (min-width: 750px) and (max-width: 1300px) {
   .text1 {
     display: flex;
     flex-wrap: wrap;
     /* flex-direction: column; */
-/* }
+  }
   .textleft {
     height: 20vh;
     margin-bottom: 10%;
@@ -566,7 +567,7 @@ li {
   .textright {
     display: flex;
     /* justify-content: center; */
-/* justify-items: center;
+    justify-items: center;
     margin-left: 30%;
     width: 20%;
   }
@@ -581,7 +582,7 @@ li {
     height: 140vh;
     display: flex;
     /* flex-wrap: wrap; */
-/* flex-direction: column;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
@@ -589,17 +590,19 @@ li {
     display: flex;
     flex-wrap: wrap;
     /* flex-direction: column; */
-/* }
+  }
   .textleft {
-    height: 20vh; */
-/* margin-bottom: 10%;
+    height: 20vh;
+    margin-bottom: 10%;
   }
   .textleft h1 {
     justify-content: flex-end;
   }
-  .textright { */
-/* display: flex; */
+  .textright {
+    /* display: flex; */
 
-/* justify-items: center;
+    justify-items: center;
     margin-left: 30%;
-    width: 20%; */
+    width: 20%;
+  }
+}
