--- a/Interior/style.css
+++ b/Interior/style.css
@@ -32,7 +32,7 @@ li {
   font-size: larger;
 }
 .img1 {
-  background-image: url(../Images/bg1.jpg);
+  background-image: url(../Interior/Images/bg1.jpg);
   height: 100vh;
   width: 100%;
 }
@@ -171,7 +171,7 @@ li {
   /* border: 1px solid black; */
 }
 .img3 .outer .card1 .image {
-  background-image: url(../Images/bg1.jpg);
+  background-image: url(../Interior/Images/bg1.jpg);
   background-size: cover;
   width: 50em;
   height: 35em;
